@@ -7,8 +7,6 @@ class Vpc_List_Switch_Component extends Vpc_Abstract_List_Component
         $ret['assets']['files'][] = 'vps/Vpc/List/Switch/Component.js';
         $ret['assets']['dep'][] = 'ExtCore';
         $ret['generators']['child']['component'] = 'Vpc_List_Switch_Preview_Component';
-        $ret['placeholder']['prev'] = trlVps('previous');
-        $ret['placeholder']['next'] = trlVps('next');
         $ret['previewCssClass'] = '';
 
         // transition kann auch auf false gesetzt werden um "direkt" umzuschalten
